--- a/web-app/index.html
+++ b/web-app/index.html
@@ -14,7 +14,7 @@
 
 <main>
     <div class="game_board_container">
-        <table id="game_board">
+        <table id="game_board" role="grid">
         </table>
     </div>
 </main>
