--- a/web-app/index.html
+++ b/web-app/index.html
@@ -20,4 +20,13 @@
 </main>
 <!-- comment -->
 
-<aside>Aside</aside>
+<aside>
+    <h2>Level <span id="level">25</span></h2>
+    <dl>
+        <dt>Moves</dt>
+        <dd id="moves">0</dd>
+        
+        <dt>Par</dt>
+        <dd id="par">16</dd>
+    </dl>
+</aside>
