--- a/web-app/index.html
+++ b/web-app/index.html
@@ -25,22 +25,8 @@
 
 <main>
     <div class="grid-container">
-        <table>
-            <tr>
-                <td>1,1</td>
-                <td>1,2</td>
-                <td>1,3</td>
-            </tr>
-            <tr>
-                <td>2,1</td>
-                <td>2,2</td>
-                <td>2,3</td>
-            </tr>
-            <tr>
-                <td>3,1</td>
-                <td>3,2</td>
-                <td>3,3</td>
-            </tr>
+        <table id="grid">
+
         </table>
     </div>
 </main>
